# mccode-language-server

./: .gitignore  README.md  pyproject.toml
.github/: dependabot.yml  release.yml
.github/workflows/: ci.yml  release.yml
src/mclsp/: __init__.py  c_bridge.py  cli.py  document.py  flavor.py  server.py
src/mclsp/handlers/: __init__.py  completion.py  diagnostics.py  hover.py
syntaxes/: mccode.tmLanguage.json
tests/: test_c_bridge.py  test_completions.py  test_diagnostics.py  test_document.py  test_flavor.py  test_hover.py  test_instr_diags.py  test_mcdoc.py  test_mclsp.py  test_server.py
vscode-extension/: .vscodeignore  LICENSE  extension.js  language-configuration.json  package-lock.json  package.json
vscode-extension/syntaxes/: mccode.tmLanguage.json
