[build-system]
requires = ["setuptools>=61", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "mclsp"
description = "McCode DSL language server (LSP) for .instr and .comp files"
readme = "README.md"
license = {text = "BSD-3-Clause"}
requires-python = ">=3.10"
authors = [
    { name = "Gregory Tucker", email = "gregory.tucker@ess.eu" },
]
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Editors :: Integrated Development Environments (IDE)",
]
dependencies = [
    "mccode-antlr>=0.18.0",
    "pygls>=1.3.0",
]
dynamic = ["version"]

[project.optional-dependencies]
test = ["pytest>=7"]

[project.urls]
"Homepage" = "https://github.com/mcdotstar/mccode-language-server"

[project.scripts]
mclsp = "mclsp.cli:mclsp"

[tool.setuptools_scm]

[tool.setuptools.packages.find]
where = ["src"]
include = ["mclsp*"]

